--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -183,6 +183,8 @@
 
 @import './components/forms.css';
 @import './components/search.css';
+@import './components/map.css';
+@import './components/enhanced-select.css';
 
 /* ==========================================================================
    Utilities Layer - Import custom utilities
