--- a/templates/partials/_sidebar.html.twig
+++ b/templates/partials/_sidebar.html.twig
@@ -1,5 +1,5 @@
 <!-- Desktop Sidebar -->
-<aside class="hidden md:flex md:flex-col md:w-64 md:fixed md:inset-y-0 md:pt-16 bg-neutral-50 dark:bg-neutral-900 border-r border-neutral-200 dark:border-neutral-800" role="navigation" aria-label="{{ 'nav.sidebar.label'|trans({}, 'navigation') }}">
+<aside class="hidden md:flex md:flex-col md:w-(--sidebar-width) md:fixed md:inset-y-0 md:pt-16 bg-white dark:bg-neutral-900 border-r border-neutral-200 dark:border-neutral-800" role="navigation" aria-label="{{ 'nav.sidebar.label'|trans({}, 'navigation') }}">
   <div class="flex flex-col flex-1 min-h-0">
     <!-- Skip link for keyboard users -->
     <a href="#main-content" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-cc-blue-600 text-white px-4 py-2 rounded-lg z-50 focus:outline-none focus:ring-2 focus:ring-white">
