--- a/templates/ranking/index.html.twig
+++ b/templates/ranking/index.html.twig
@@ -23,9 +23,22 @@
 {% endblock %}
 
 {% block body %}
-  {% include 'ranking/info.html.twig' with {'ranking': ranking, 'previousRanking': previousRanking} only %}
-  <div id="ranking-result"></div>
-{% endblock %}
-
-{% block javascripts %}
+  {# Wrapper with right margin on desktop for fixed filter sidebar #}
+  <div class="lg:mr-72">
+    {% include 'Ranking/info.html.twig' with {'ranking': ranking, 'previousRanking': previousRanking} only %}
+    
+    <div id="ranking-result">
+      {% include 'Ranking/results.html.twig' with {'coasters': coasters, 'filtered': filtered, 'firstRank': firstRank} only %}
+    </div>
+  </div>
+  
+  {# Mobile filter button - sticky at bottom #}
+  <div class="lg:hidden fixed bottom-4 right-4 z-40">
+    <button type="button"
+            class="flex items-center gap-2 px-4 py-3 bg-cc-blue-600 hover:bg-cc-blue-700 text-white font-medium rounded-full shadow-lg hover:shadow-xl transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-cc-blue-500 focus:ring-offset-2"
+            data-action="global#openFilterSidebar">
+      {{ ux_icon('tabler:adjustments-horizontal', {'class': 'w-5 h-5', 'aria-hidden': 'true'}) }}
+      <span>{{ 'filters.title'|trans }}</span>
+    </button>
+  </div>
 {% endblock %}
